--- a/Resources/views/Admin/view.html.twig
+++ b/Resources/views/Admin/view.html.twig
@@ -5,23 +5,23 @@
 </h3>
 {{ pageSetVar('title', __('View pages list')) }}
 
-{% include 'ZikulaPagesModule:Admin:filter_form.html.twig' %}
+{% include '@ZikulaPagesModule/Admin/filter_form.html.twig' %}
 
 <table class="table table-striped">
     <thead>
-    <tr>
-        <th><a class='{{ sort.pageid.class }}' href='{{ sort.pageid.url }}'>{{ __('ID') }}</a></th>
-        <th><a class='{{ sort.title.class }}' href='{{ sort.title.url }}'>{{ __('Title') }}</a></th>
-        <th>{{ __('Creator') }}</th>
-        {% if modvars.ZikulaPagesModule.enablecategorization %}
-            <th>{{ __('Categories') }}</th>
-        {% endif %}
-        {% if modvars.ZConfig.multilingual %}
-            <th>{{ __('Language') }}</th>
-        {% endif %}
-        <th><a class='{{ sort.cr_date.class }}' href='{{ sort.cr_date.url }}'>{{ __('Created') }}</a></th>
-        <th>{{ __('Actions') }}</th>
-    </tr>
+        <tr>
+            <th><a class="{{ sort.pageid.class }}" href="{{ sort.pageid.url }}">{{ __('ID') }}</a></th>
+            <th><a class="{{ sort.title.class }}" href="{{ sort.title.url }}">{{ __('Title') }}</a></th>
+            <th>{{ __('Creator') }}</th>
+            {% if modvars.ZikulaPagesModule.enablecategorization %}
+                <th>{{ __('Categories') }}</th>
+            {% endif %}
+            {% if modvars.ZConfig.multilingual %}
+                <th>{{ __('Language') }}</th>
+            {% endif %}
+            <th><a class="{{ sort.cr_date.class }}" href="{{ sort.cr_date.url }}">{{ __('Created') }}</a></th>
+            <th>{{ __('Actions') }}</th>
+        </tr>
     </thead>
     <tbody>
     {% for page in pages %}
@@ -64,5 +64,5 @@
     {% endfor %}
     </tbody>
 </table>
-{{ pager({rowcount:pager.numitems, limit:pager.itemsperpage, posvar:'startnum', route:'zikulapagesmodule_admin_index'}) }}
+{{ pager({rowcount: pager.numitems, limit: pager.itemsperpage, posvar: 'startnum', route: 'zikulapagesmodule_admin_index'}) }}
 {{ adminFooter() }}
