--- a/Resources/views/Admin/delete.html.twig
+++ b/Resources/views/Admin/delete.html.twig
@@ -1,4 +1,4 @@
-{% form_theme form 'ZikulaFormExtensionBundle:Form:bootstrap_3_zikula_admin_layout.html.twig' %}
+{% form_theme form '@ZikulaFormExtension/Form/bootstrap_3_zikula_admin_layout.html.twig' %}
 {{ pageSetVar('title', __('Delete page')) }}
 {{ adminHeader() }}
 <div class="container-fluid">
@@ -35,6 +35,5 @@
         {{ form_end(form) }}
     </div>
     {{ notifyDisplayHooks('pages.ui_hooks.pages.form_delete', page.pageid|default(null)) }}
-
 </div>
 {{ adminFooter() }}
