--- a/Resources/views/Admin/modify.html.twig
+++ b/Resources/views/Admin/modify.html.twig
@@ -1,6 +1,6 @@
 {{ pageAddAsset('javascript', zasset('@ZikulaPagesModule:js/Zikula.Pages.Admin.Modify.js')) }}
 {{ pageSetVar('title', __('Modify page')) }}
-{% form_theme form 'ZikulaFormExtensionBundle:Form:bootstrap_3_zikula_admin_layout.html.twig' %}
+{% form_theme form '@ZikulaFormExtension/Form/bootstrap_3_zikula_admin_layout.html.twig' %}
 {{ adminHeader() }}
 <div class="container-fluid">
     <div class="row">
@@ -59,6 +59,5 @@
         {{ form_end(form) }}
     </div>
     {{ notifyDisplayHooks('pages.ui_hooks.pages.form_edit', form.vars.value.pageid|default(null)) }}
-
 </div>
 {{ adminFooter() }}
