--- a/Resources/views/Config/config.html.twig
+++ b/Resources/views/Config/config.html.twig
@@ -1,6 +1,6 @@
 {% form_theme form with [
-    'ZikulaFormExtensionBundle:Form:bootstrap_3_zikula_admin_layout.html.twig',
-    'ZikulaFormExtensionBundle:Form:form_div_layout.html.twig'
+    '@ZikulaFormExtension/Form/bootstrap_3_zikula_admin_layout.html.twig',
+    '@ZikulaFormExtension/Form/form_div_layout.html.twig'
 ] %}
 {{ pageSetVar('title', __('Pages settings')) }}
 {{ adminHeader() }}
@@ -40,6 +40,5 @@
         </div>
         {{ form_end(form) }}
     </div>
-
 </div>
 {{ adminFooter() }}
